feat: profile name field, account deletion, user search (API-10, API-11)
Closes #316
Closes #317
